# graphiti

./: .env.example  .gitignore  .mcp.json  BACKUP_SERVICE.md  CODE_REVIEW.md  CONFIGURATION.md  DEPLOYMENT.md  GRAPHITI_ADMIN_UI_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TEST.md  LOCAL_TEST_GUIDE.md  MCP_HTTP_SERVER_COMPLETE.md  PROJECT_OVERVIEW.md  TEST_RESULTS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  run-integration-test.sh  test-local.sh
.claude/: settings.local.json
deploy/: nginx.conf
graphiti-admin/: .env.example  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
graphiti_core/: edges.py  graphiti.py  nodes.py
mcp-http-server/: .dockerignore  .env.example  .eslintrc.json  .gitignore  AUTH.md  CHANGES.md  CODE_REVIEW_FIXES.md  CONFIG.md  Dockerfile  HONO_MIGRATION.md  HTTP_SERVER_GUIDE.md  QUICK_START.md  README.md  README_HTTP_MODE.md  SIMPLE_DEPLOY.md  TOKEN_PASSTHROUGH.md  build.sh  claude-desktop-config.json  docker-compose.yml  package.json  test-hono-build.sh  test-http-server.sh  使用说明.md
mcp_server/: .env.example  CLAUDE_CODE_CONFIG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backup  QUICKSTART.md  docker-compose.yml  graphiti_mcp_server.py  nginx.conf  pyproject.toml
mcp_server/scripts/: backup-data.sh  backup-entrypoint.sh  backup.sh  generate-htpasswd.sh  restore.sh
neo4j-backup/: Dockerfile  README.md  api.py  backup.py  config_manager.py  entrypoint.sh
scripts/: migrate_add_metadata_fields.cypher  migrate_add_metadata_fields.py  (+1 more)
server/: Dockerfile
(+67 files in other folders)
