[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "openai>=1.68.2",
    "graphiti-core>=0.14.0",
    "azure-identity>=1.21.0",
]

[project.optional-dependencies]
google-genai = [
    "google-genai>=1.8.0",
    "sentence-transformers>=3.2.1",  # Required for BGE reranker
]
